--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -2705,37 +2705,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Variable                             Type                          Data/Info\n",
-      "----------------------------------------------------------------------------\n",
-      "NamespaceMagics                      MetaHasTraits                 <class 'IPython.core.magi<...>mespace.NamespaceMagics'>\n",
-      "average_math_score                   float                         78.98537145774827\n",
-      "average_reading_score                float                         81.87784018381414\n",
-      "get_ipython                          function                      <function get_ipython at 0x7fc8fbbaf3a0>\n",
-      "getsizeof                            builtin_function_or_method    <built-in function getsizeof>\n",
-      "json                                 module                        <module 'json' from '/opt<...>hon3.8/json/__init__.py'>\n",
-      "np                                   module                        <module 'numpy' from '/op<...>kages/numpy/__init__.py'>\n",
-      "overall_passing_math_reading_count   int64                         25528\n",
-      "overall_passing_percentage           float64                       65.17232575950983\n",
-      "passing_math                         DataFrame                            Student ID     stu<...>[29370 rows x 11 columns]\n",
-      "passing_math_count                   int64                         29370\n",
-      "passing_math_percentage              float64                       74.9808526933878\n",
-      "passing_math_reading                 DataFrame                            Student ID     stu<...>[25528 rows x 11 columns]\n",
-      "passing_reading                      DataFrame                            Student ID     stu<...>[33610 rows x 11 columns]\n",
-      "passing_reading_count                int64                         33610\n",
-      "passing_reading_percentage           float64                       85.80546336482001\n",
-      "pd                                   module                        <module 'pandas' from '/o<...>ages/pandas/__init__.py'>\n",
-      "prefixes_suffixes                    list                          n=9\n",
-      "school_count                         int                           15\n",
-      "school_count_2                       ndarray                       15: 15 elems, type `object`, 120 bytes\n",
-      "school_data_complete_df              DataFrame                            Student ID     stu<...>[39170 rows x 11 columns]\n",
-      "school_data_df                       DataFrame                         School ID            <...>   Charter  1635  1043130\n",
-      "school_data_to_load                  str                           Resources/schools_complete.csv\n",
-      "student_count                        int64                         39170\n",
-      "student_data_df                      DataFrame                            Student ID     stu<...>n[39170 rows x 7 columns]\n",
-      "student_data_to_load                 str                           Resources/students_complete.csv\n",
-      "total_budget                         int64                         24649428\n",
-      "var_dic_list                         function                      <function var_dic_list at 0x7fc8fe95b5e0>\n",
-      "word                                 str                            PhD\n"
+      "Variable                             Type         Data/Info\n",
+      "-----------------------------------------------------------\n",
+      "average_math_score                   float        78.98537145774827\n",
+      "average_reading_score                float        81.87784018381414\n",
+      "overall_passing_math_reading_count   int64        25528\n",
+      "overall_passing_percentage           float64      65.17232575950983\n",
+      "passing_math                         DataFrame           Student ID     stu<...>[29370 rows x 11 columns]\n",
+      "passing_math_count                   int64        29370\n",
+      "passing_math_percentage              float64      74.9808526933878\n",
+      "passing_math_reading                 DataFrame           Student ID     stu<...>[25528 rows x 11 columns]\n",
+      "passing_reading                      DataFrame           Student ID     stu<...>[33610 rows x 11 columns]\n",
+      "passing_reading_count                int64        33610\n",
+      "passing_reading_percentage           float64      85.80546336482001\n",
+      "pd                                   module       <module 'pandas' from '/o<...>ages/pandas/__init__.py'>\n",
+      "prefixes_suffixes                    list         n=9\n",
+      "school_count                         int          15\n",
+      "school_count_2                       ndarray      15: 15 elems, type `object`, 120 bytes\n",
+      "school_data_complete_df              DataFrame           Student ID     stu<...>[39170 rows x 11 columns]\n",
+      "school_data_df                       DataFrame        School ID            <...>   Charter  1635  1043130\n",
+      "school_data_to_load                  str          Resources/schools_complete.csv\n",
+      "student_count                        int64        39170\n",
+      "student_data_df                      DataFrame           Student ID     stu<...>n[39170 rows x 7 columns]\n",
+      "student_data_to_load                 str          Resources/students_complete.csv\n",
+      "total_budget                         int64        24649428\n",
+      "word                                 str           PhD\n"
      ]
     }
    ],
@@ -6187,7 +6181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 84,
    "id": "bee2ec82",
    "metadata": {},
    "outputs": [
@@ -6337,7 +6331,7 @@
        "Griffin High School                       $585-629  Medium (1000-2000)  "
       ]
      },
-     "execution_count": 103,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6349,7 +6343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 85,
    "id": "e80967e4",
    "metadata": {},
    "outputs": [],
@@ -6365,7 +6359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 86,
    "id": "8f509b73",
    "metadata": {},
    "outputs": [
@@ -6448,7 +6442,7 @@
        "Large (2000-5000)           82.766634          58.286003  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6467,7 +6461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 87,
    "id": "cdc71f0a",
    "metadata": {},
    "outputs": [
@@ -6550,7 +6544,7 @@
        "Large (2000-5000)                 83                58  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6567,28 +6561,212 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "860ebb54",
+   "cell_type": "markdown",
+   "id": "6b02a037",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Finally, we want the school type to analyze the results"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "9dab79ce",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
+   "id": "6f7523c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create the new type dataframe\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : type_math_scores,\n",
+    "          \"Average Reading Score\": type_reading_scores,\n",
+    "          \"% Passing Math\": type_passing_math,\n",
+    "          \"% Passing Reading\": type_passing_reading,\n",
+    "          \"% Overall Passing\": type_overall_passing})\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "id": "321e447c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
+       "\n",
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                    97                90  \n",
+       "District                   81                54  "
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Formating\n",
+    "\n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df"
+   ]
   }
  ],
  "metadata": {
