--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -1687,73 +1687,421 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a Series of scores by grade levels using conditionals.\n",
+    "ninth_graders = school_data_complete_df[school_data_complete_df[\"grade\"]==\"9th\"]\n",
+    "tenth_graders = school_data_complete_df[school_data_complete_df[\"grade\"] == \"10th\"]\n",
+    "eleventh_graders = school_data_complete_df[school_data_complete_df[\"grade\"] == \"11th\"]\n",
+    "twelfth_graders = school_data_complete_df[school_data_complete_df[\"grade\"] == \"12th\"]\n",
     "\n",
     "# Group each school Series by the school name for the average math score.\n",
+    "ninth_grade_math_scores = ninth_graders.groupby([\"school_name\"]).mean()[\"math_score\"]\n",
+    "tenth_grade_math_scores = tenth_graders.groupby([\"school_name\"]).mean()[\"math_score\"]\n",
+    "eleventh_grade_math_scores = eleventh_graders.groupby([\"school_name\"]).mean()[\"math_score\"]\n",
+    "twelfth_grade_math_scores = twelfth_graders.groupby([\"school_name\"]).mean()[\"math_score\"]\n",
     "\n",
-    "# Group each school Series by the school name for the average reading score.\n"
+    "# Group each school Series by the school name for the average reading score.\n",
+    "ninth_grade_reading_scores = ninth_graders.groupby([\"school_name\"]).mean()[\"reading_score\"]\n",
+    "tenth_grade_reading_scores = tenth_graders.groupby([\"school_name\"]).mean()[\"reading_score\"]\n",
+    "eleventh_grade_reading_scores = eleventh_graders.groupby([\"school_name\"]).mean()[\"reading_score\"]\n",
+    "twelfth_grade_reading_scores = twelfth_graders.groupby([\"school_name\"]).mean()[\"reading_score\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Combine each Series for average math scores by school into single data frame.\n"
+    "# Combine each Series for average math scores by school into single data frame.\n",
+    "math_scores_by_grade = pd.DataFrame({\n",
+    "               \"9th\": ninth_grade_math_scores,\n",
+    "               \"10th\": tenth_grade_math_scores,\n",
+    "               \"11th\": eleventh_grade_math_scores,\n",
+    "               \"12th\": twelfth_grade_math_scores})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Combine each Series for average reading scores by school into single data frame.\n"
+    "# Combine each Series for average reading scores by school into single data frame.\n",
+    "reading_scores_by_grade = pd.DataFrame({\n",
+    "              \"9th\": ninth_grade_reading_scores,\n",
+    "              \"10th\": tenth_grade_reading_scores,\n",
+    "              \"11th\": eleventh_grade_reading_scores,\n",
+    "              \"12th\": twelfth_grade_reading_scores})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Format each grade column.\n"
+    "# Format each grade column.\n",
+    "math_scores_by_grade[\"9th\"] = math_scores_by_grade[\"9th\"].map(\"{:.1f}\".format)\n",
+    "math_scores_by_grade[\"10th\"] = math_scores_by_grade[\"10th\"].map(\"{:.1f}\".format)\n",
+    "math_scores_by_grade[\"11th\"] = math_scores_by_grade[\"11th\"].map(\"{:.1f}\".format)\n",
+    "math_scores_by_grade[\"12th\"] = math_scores_by_grade[\"12th\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "reading_scores_by_grade[\"9th\"] = reading_scores_by_grade[\"9th\"].map(\"{:,.1f}\".format)\n",
+    "reading_scores_by_grade[\"10th\"] = reading_scores_by_grade[\"10th\"].map(\"{:,.1f}\".format)\n",
+    "reading_scores_by_grade[\"11th\"] = reading_scores_by_grade[\"11th\"].map(\"{:,.1f}\".format)\n",
+    "reading_scores_by_grade[\"12th\"] = reading_scores_by_grade[\"12th\"].map(\"{:,.1f}\".format)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>9th</th>\n",
+       "      <th>10th</th>\n",
+       "      <th>11th</th>\n",
+       "      <th>12th</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>77.1</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>77.5</td>\n",
+       "      <td>76.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>83.1</td>\n",
+       "      <td>83.2</td>\n",
+       "      <td>82.8</td>\n",
+       "      <td>83.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>76.4</td>\n",
+       "      <td>76.5</td>\n",
+       "      <td>76.9</td>\n",
+       "      <td>77.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>77.4</td>\n",
+       "      <td>77.7</td>\n",
+       "      <td>76.9</td>\n",
+       "      <td>76.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>82.0</td>\n",
+       "      <td>84.2</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>83.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>77.4</td>\n",
+       "      <td>77.3</td>\n",
+       "      <td>77.1</td>\n",
+       "      <td>77.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Holden High School</th>\n",
+       "      <td>83.8</td>\n",
+       "      <td>83.4</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>82.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>75.9</td>\n",
+       "      <td>76.4</td>\n",
+       "      <td>77.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>77.2</td>\n",
+       "      <td>76.7</td>\n",
+       "      <td>77.5</td>\n",
+       "      <td>76.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>83.6</td>\n",
+       "      <td>83.4</td>\n",
+       "      <td>84.3</td>\n",
+       "      <td>84.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>76.9</td>\n",
+       "      <td>76.6</td>\n",
+       "      <td>76.4</td>\n",
+       "      <td>77.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>83.4</td>\n",
+       "      <td>82.9</td>\n",
+       "      <td>83.4</td>\n",
+       "      <td>83.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>nan</td>\n",
+       "      <td>83.1</td>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>83.1</td>\n",
+       "      <td>83.7</td>\n",
+       "      <td>83.2</td>\n",
+       "      <td>83.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>83.3</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>83.6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        9th  10th  11th  12th\n",
+       "Bailey High School     77.1  77.0  77.5  76.5\n",
+       "Cabrera High School    83.1  83.2  82.8  83.3\n",
+       "Figueroa High School   76.4  76.5  76.9  77.2\n",
+       "Ford High School       77.4  77.7  76.9  76.2\n",
+       "Griffin High School    82.0  84.2  83.8  83.4\n",
+       "Hernandez High School  77.4  77.3  77.1  77.2\n",
+       "Holden High School     83.8  83.4  85.0  82.9\n",
+       "Huang High School      77.0  75.9  76.4  77.2\n",
+       "Johnson High School    77.2  76.7  77.5  76.9\n",
+       "Pena High School       83.6  83.4  84.3  84.1\n",
+       "Rodriguez High School  76.9  76.6  76.4  77.7\n",
+       "Shelton High School    83.4  82.9  83.4  83.8\n",
+       "Thomas High School      nan  83.1  83.5  83.5\n",
+       "Wilson High School     83.1  83.7  83.2  83.0\n",
+       "Wright High School     83.3  84.0  83.8  83.6"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Remove the index.\n",
+    "math_scores_by_grade.index.name = None\n",
     "\n",
-    "\n",
-    "# Display the data frame\n"
+    "# Display the data frame\n",
+    "math_scores_by_grade"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>9th</th>\n",
+       "      <th>10th</th>\n",
+       "      <th>11th</th>\n",
+       "      <th>12th</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>81.3</td>\n",
+       "      <td>80.9</td>\n",
+       "      <td>80.9</td>\n",
+       "      <td>80.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>83.7</td>\n",
+       "      <td>84.3</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>84.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>81.2</td>\n",
+       "      <td>81.4</td>\n",
+       "      <td>80.6</td>\n",
+       "      <td>81.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>80.6</td>\n",
+       "      <td>81.3</td>\n",
+       "      <td>80.4</td>\n",
+       "      <td>80.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>83.4</td>\n",
+       "      <td>83.7</td>\n",
+       "      <td>84.3</td>\n",
+       "      <td>84.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>80.9</td>\n",
+       "      <td>80.7</td>\n",
+       "      <td>81.4</td>\n",
+       "      <td>80.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Holden High School</th>\n",
+       "      <td>83.7</td>\n",
+       "      <td>83.3</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>84.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>81.3</td>\n",
+       "      <td>81.5</td>\n",
+       "      <td>81.4</td>\n",
+       "      <td>80.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>81.3</td>\n",
+       "      <td>80.8</td>\n",
+       "      <td>80.6</td>\n",
+       "      <td>81.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>83.8</td>\n",
+       "      <td>83.6</td>\n",
+       "      <td>84.3</td>\n",
+       "      <td>84.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>81.0</td>\n",
+       "      <td>80.6</td>\n",
+       "      <td>80.9</td>\n",
+       "      <td>80.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>84.1</td>\n",
+       "      <td>83.4</td>\n",
+       "      <td>84.4</td>\n",
+       "      <td>82.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>nan</td>\n",
+       "      <td>84.3</td>\n",
+       "      <td>83.6</td>\n",
+       "      <td>83.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>83.9</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>84.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>83.8</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>84.2</td>\n",
+       "      <td>84.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        9th  10th  11th  12th\n",
+       "Bailey High School     81.3  80.9  80.9  80.9\n",
+       "Cabrera High School    83.7  84.3  83.8  84.3\n",
+       "Figueroa High School   81.2  81.4  80.6  81.4\n",
+       "Ford High School       80.6  81.3  80.4  80.7\n",
+       "Griffin High School    83.4  83.7  84.3  84.0\n",
+       "Hernandez High School  80.9  80.7  81.4  80.9\n",
+       "Holden High School     83.7  83.3  83.8  84.7\n",
+       "Huang High School      81.3  81.5  81.4  80.3\n",
+       "Johnson High School    81.3  80.8  80.6  81.2\n",
+       "Pena High School       83.8  83.6  84.3  84.6\n",
+       "Rodriguez High School  81.0  80.6  80.9  80.4\n",
+       "Shelton High School    84.1  83.4  84.4  82.8\n",
+       "Thomas High School      nan  84.3  83.6  83.8\n",
+       "Wilson High School     83.9  84.0  83.8  84.3\n",
+       "Wright High School     83.8  83.8  84.2  84.1"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Remove the index.\n",
+    "reading_scores_by_grade.index.name = None\n",
     "\n",
-    "\n",
-    "# Display the data frame\n"
+    "# Display the data frame\n",
+    "reading_scores_by_grade"
    ]
   },
   {
@@ -1765,7 +2113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1777,7 +2125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1786,7 +2134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1795,7 +2143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1811,7 +2159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1822,7 +2170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1831,7 +2179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
@@ -1842,7 +2190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1858,7 +2206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1867,7 +2215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1876,7 +2224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
